--- a/mobile_AI/pytorch_recommendation.ipynb
+++ b/mobile_AI/pytorch_recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
     }
    ],
    "source": [
-    "x = cv2.imread('cat.jpg')\n",
+    "x = cv2.imread('C://Vscode_Workspace//Resnet//Toy-Project//mobile_AI//test_images//cat.jpg')\n",
     "x = cv2.resize(x, (224,224))\n",
     "x= x.transpose(2,0,1).astype(np.float32)[None]\n",
     "\n",
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "x = cv2.imread('dog.jpg')\n",
+    "x = cv2.imread('C://Vscode_Workspace//Resnet//Toy-Project//mobile_AI//test_images//dog.jpg')\n",
     "x = cv2.resize(x, (224,224))\n",
     "x= x.transpose(2,0,1).astype(np.float32)[None]\n",
     "\n",
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
     }
    ],
    "source": [
-    "x = cv2.imread('cat2.jpg')\n",
+    "x = cv2.imread('C://Vscode_Workspace//Resnet//Toy-Project//mobile_AI//test_images//cat2.jpg')\n",
     "x = cv2.resize(x, (224,224))\n",
     "x= x.transpose(2,0,1).astype(np.float32)[None]\n",
     "\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
     }
    ],
    "source": [
-    "x = cv2.imread('cat3.jpg')\n",
+    "x = cv2.imread('C://Vscode_Workspace//Resnet//Toy-Project//mobile_AI//test_images//cat3.jpg')\n",
     "x = cv2.resize(x, (224,224))\n",
     "x= x.transpose(2,0,1).astype(np.float32)[None]\n",
     "\n",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
     }
    ],
    "source": [
-    "x = cv2.imread('dog2.jpg')\n",
+    "x = cv2.imread('C://Vscode_Workspace//Resnet//Toy-Project//mobile_AI//test_images//dog2.jpg')\n",
     "x = cv2.resize(x, (224,224))\n",
     "x= x.transpose(2,0,1).astype(np.float32)[None]\n",
     "\n",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,23 +657,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('34', array([268.22296], dtype=float32)), ('8', array([271.29294], dtype=float32)), ('47', array([272.61487], dtype=float32)), ('35', array([272.67883], dtype=float32)), ('46', array([273.07068], dtype=float32))]\n",
+      "[('34', array([268.223], dtype=float32)), ('8', array([271.29294], dtype=float32)), ('47', array([272.61484], dtype=float32)), ('35', array([272.67883], dtype=float32)), ('46', array([273.07068], dtype=float32))]\n",
       "ID =  34\n",
-      "Eucledian Distance =  [268.22296]\n"
+      "Eucledian Distance =  [268.223]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HUSTAR25\\AppData\\Local\\Temp\\ipykernel_15484\\3021540593.py:6: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "C:\\Users\\kamji\\AppData\\Local\\Temp\\ipykernel_17932\\2293145880.py:6: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  pp = np.array(recommendations)[:,0]\n"
      ]
     },
@@ -714,7 +714,7 @@
      "output_type": "stream",
      "text": [
       "ID =  47\n",
-      "Eucledian Distance =  [272.61487]\n"
+      "Eucledian Distance =  [272.61484]\n"
      ]
     },
     {
@@ -771,7 +771,7 @@
     }
    ],
    "source": [
-    "input = find_feature(\"C:\\\\Users\\\\HUSTAR25\\\\Desktop\\\\mobile_project\\\\test_img4.jpg\")\n",
+    "input = find_feature(\"C://Vscode_Workspace//Resnet//Toy-Project//mobile_AI//test_images//test_img4.JPG\")\n",
     "\n",
     "recommendations = get_similar_pictures(input, feature_list, 5)\n",
     "print(recommendations)\n",
@@ -828,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
